--- a/package.json
+++ b/package.json
@@ -12,20 +12,33 @@
     "babel-eslint": "^7.2.1",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-strict-mode": "^6.22.0",
-    "cross-env": "^3.2.4",
+    "babel-register": "^6.24.0",
     "eslint": "^3.18.0",
     "eslint-config-makeomatic": "^1.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "nyc": "^10.2.0"
+    "eslint-plugin-promise": "^3.5.0"
   },
   "dependencies": {
+    "glob": "^7.1.1",
     "latest-version": "^3.1.0",
     "ms-conf": "^3.1.2",
+    "npm-path": "^2.0.3",
     "shelljs": "^0.7.7",
     "yargs": "^7.0.2"
   },
   "bin": {
     "mdep": "./bin/cli.js"
-  }
+  },
+  "peerDependencies": {
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-register": "^6.24.0",
+    "codecov": "^2.1.0",
+    "cross-env": "^4.0.0",
+    "mocha": "^3.2.0",
+    "nyc": "^10.2.0"
+  },
+  "files": [
+    "./bin/**/*.js",
+    "./templates"
+  ]
 }
