--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/makeomatic/deploy.git",
   "author": "Vitaly Aminev <v@makeomatic.ca>",
   "license": "MIT",
+  "scripts": {
+    "postpublish": "git push && git push --tags"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
