--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-promise": "^3.5.0"
   },
   "dependencies": {
+    "death": "^1.1.0",
     "glob": "^7.1.1",
     "ms-conf": "^3.1.2",
     "npm-path": "^2.0.3",
