--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@makeomatic/deploy",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Common build and deploy tasks wrapped in a cli",
-  "main": "./bin/cli.js",
+  "main": "./bin/index.js",
   "repository": "https://github.com/makeomatic/deploy.git",
   "author": "Vitaly Aminev <v@makeomatic.ca>",
   "license": "MIT",
@@ -13,8 +13,8 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.1",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-istanbul": "^4.1.3",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
@@ -29,7 +29,7 @@
     "ms-conf": "^3.1.2",
     "npm-path": "^2.0.3",
     "shelljs": "^0.7.7",
-    "yargs": "^7.0.2"
+    "yargs": "^8.0.1"
   },
   "bin": {
     "mdep": "./bin/cli.js"
