--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-plugin-istanbul": "^4.1.1",
     "babel-register": "^6.24.0",
     "codecov": "^2.1.0",
-    "cross-env": "^4.0.0",
+    "cross-env": "^4.0.0 || ^5.0.0",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0"
   },
