--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@makeomatic/deploy",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "description": "Common build and deploy tasks wrapped in a cli",
   "main": "./bin/index.js",
   "repository": "https://github.com/makeomatic/deploy.git",
@@ -14,18 +14,18 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-istanbul": "^4.1.3",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-makeomatic": "^1.0.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-promise": "^3.5.0"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "death": "^1.1.0",
-    "glob": "^7.1.1",
+    "glob": "^7.1.2",
     "ms-conf": "^3.1.2",
     "npm-path": "^2.0.3",
     "shelljs": "^0.7.7",
@@ -40,7 +40,7 @@
     "codecov": "^2.1.0",
     "cross-env": "^4.0.0 || ^5.0.0",
     "mocha": "^3.2.0",
-    "nyc": "^10.2.0"
+    "nyc": "^10.2.0 || ^11.0.0"
   },
   "files": [
     "bin/",
