--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.1",
-    "eslint": "^4.1.1",
+    "eslint": "^4.2.0",
     "eslint-config-makeomatic": "^1.0.1",
-    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.5.0",
     "jest": "^20.0.4",
     "nyc": "^11.0.3"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
-    "chrome-launcher": "^0.3.0",
-    "chrome-remote-interface": "^0.23.3",
+    "chrome-launcher": "^0.3.1",
+    "chrome-remote-interface": "^0.24.2",
     "death": "^1.1.0",
+    "find-up": "^2.1.0",
     "glob": "^7.1.2",
     "is": "^3.2.1",
     "lighthouse-logger": "^1.0.0",
