major(semantic-release): auto-setup parent packages
BREAKING CHANGE: adds postinstall script that adds following
configuration to package.json

```
"scripts": {
  "semantic-release": "semantic-release pre && npm publish && semantic-release post",
  "commit": "simple-commit-message"
},
"release": {
  "analyzeCommits": "simple-commit-message",
  "generateNotes": "github-post-release",
  "branch": "master",
  "verifyConditions": "@makeomatic/condition-semaphore"
},
"config": {
  "pre-git": {
    "commit-msg": "simple",
    "pre-commit": [],
    "pre-push": [],
    "post-commit": [],
    "post-checkout": [],
    "post-merge": []
  }
}
```

--- a/__tests__/docker-compose.yml
+++ b/__tests__/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   tester:
-    image: makeomatic/node:8.1.4-chrome-tester
+    image: makeomatic/node:8.2.1-chrome-tester
     container_name: tester
     hostname: tester
     working_dir: /src
@@ -10,5 +10,5 @@ services:
       - ${PWD}:/src
     environment:
       NODE_ENV: test
-      LIGHTHOUSE_CHROMIUM_PATH: /usr/bin/chromium-browser
+      CHROME_PATH: /usr/bin/chromium-browser
     command: tail -f /dev/null
