--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-register": "^6.24.1",
+    "codecov": "^2.2.0",
     "cross-env": "^5.0.1",
     "eslint": "^4.3.0",
     "eslint-config-makeomatic": "^1.0.1",
