--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "access": "public"
   },
   "engine": {
-    "node": ">= 7.6.0"
+    "node": ">= 8.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "^8.0.3",
     "babel-jest": "^21.2.0",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-register": "^6.26.0",
     "codecov": "^3.0.0",
     "cross-env": "^5.1.1",
-    "eslint": "^4.10.0",
+    "eslint": "^4.13.1",
     "eslint-config-makeomatic": "^1.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-promise": "^3.6.0",
@@ -39,8 +39,8 @@
     "@makeomatic/condition-semaphore": "^1.0.2",
     "@makeomatic/last-release-npm": "^1.0.1",
     "bluebird": "^3.5.1",
-    "chrome-launcher": "^0.8.1",
-    "chrome-remote-interface": "^0.25.3",
+    "chrome-launcher": "^0.10.0",
+    "chrome-remote-interface": "^0.25.4",
     "death": "^1.1.0",
     "find-up": "^2.1.0",
     "github-post-release": "^1.13.1",
@@ -60,12 +60,12 @@
     "mdep": "./bin/cli.js"
   },
   "peerDependencies": {
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-istanbul": "4.x.x",
     "babel-register": "^6.24.0",
-    "codecov": "^2.1.0",
-    "cross-env": "^5.0.0",
-    "mocha": "^3.2.0",
-    "nyc": "^11.0.0"
+    "codecov": "2.x.x || 3.x.x",
+    "cross-env": "5.x.x",
+    "mocha": "3.x.x || 4.x.x",
+    "nyc": "11.x.x"
   },
   "files": [
     "bin/",
