--- a/package.json
+++ b/package.json
@@ -9,38 +9,35 @@
   "scripts": {
     "test": "./bin/cli.js test run",
     "postinstall": "node ./scripts/setup-semantic-release.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "commit": "simple-commit-message"
+    "semantic-release": "semantic-release"
   },
   "publishConfig": {
     "access": "public"
   },
   "engine": {
-    "node": ">= 8.0.0"
+    "node": ">= 8.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-jest": "^21.2.0",
+    "babel-eslint": "^8.1.2",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-register": "^6.26.0",
     "codecov": "^3.0.0",
-    "cross-env": "^5.1.1",
-    "eslint": "^4.13.1",
-    "eslint-config-makeomatic": "^1.1.0",
+    "cross-env": "^5.1.3",
+    "eslint": "^4.14.0",
+    "eslint-config-makeomatic": "^2.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-promise": "^3.6.0",
-    "jest": "^21.2.1",
-    "nyc": "^11.3.0"
+    "jest": "^22.0.4",
+    "nyc": "^11.4.1"
   },
   "dependencies": {
-    "@makeomatic/condition-semaphore": "^1.0.2",
-    "@makeomatic/last-release-npm": "^1.0.1",
+    "@makeomatic/condition-semaphore": "^2.0.0",
     "bluebird": "^3.5.1",
     "chrome-launcher": "^0.10.0",
-    "chrome-remote-interface": "^0.25.4",
+    "chrome-remote-interface": "^0.25.5",
     "death": "^1.1.0",
     "find-up": "^2.1.0",
     "github-post-release": "^1.13.1",
@@ -49,11 +46,10 @@
     "lighthouse-logger": "^1.0.1",
     "ms-conf": "^3.2.0",
     "npm-path": "^2.0.3",
-    "pre-git": "^3.16.0",
+    "pre-git": "^3.17.0",
     "rimraf": "^2.6.2",
-    "semantic-release": "^8.2.0",
+    "semantic-release": "^12.0.0",
     "shelljs": "^0.7.8",
-    "simple-commit-message": "^3.3.2",
     "yargs": "^10.0.3"
   },
   "bin": {
@@ -62,9 +58,9 @@
   "peerDependencies": {
     "babel-plugin-istanbul": "4.x.x",
     "babel-register": "^6.24.0",
-    "codecov": "2.x.x || 3.x.x",
+    "codecov": "3.x.x",
     "cross-env": "5.x.x",
-    "mocha": "3.x.x || 4.x.x",
+    "mocha": "4.x.x",
     "nyc": "11.x.x"
   },
   "files": [
@@ -73,11 +69,20 @@
     "scripts/"
   ],
   "release": {
-    "analyzeCommits": "simple-commit-message",
-    "generateNotes": "github-post-release",
     "branch": "master",
-    "verifyConditions": "@makeomatic/condition-semaphore",
-    "getLastRelease": "@makeomatic/last-release-npm"
+    "verifyConditions": ["@semantic-release/npm", "@semantic-release/github"],
+    "analyzeCommits": {
+      "preset": "angular",
+      "releaseRules": [
+        { "type": "docs", "release": "patch" },
+        { "type": "refactor", "release": "patch" },
+        { "type": "style", "release": "patch" },
+        { "type": "minor", "release": "minor" },
+        { "type": "patch", "release": "patch" },
+        { "type": "major", "release": "major" },
+        { "type": "breaking", "release": "major" }
+      ]
+    }
   },
   "config": {
     "pre-git": {
