fix: missing files from the module

--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   "files": [
     "bin/",
     "templates/",
-    "scripts/"
+    "scripts/",
+    ".releaserc.json",
+    ".commitlintrc.js"
   ]
 }
