--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./bin/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/makeomatic/deploy.git"
+    "url": "https://github.com/makeomatic/deploy"
   },
   "author": "Vitaly Aminev <v@makeomatic.ca>",
   "license": "MIT",
@@ -39,7 +39,6 @@
   },
   "dependencies": {
     "@commitlint/cli": "^6.1.3",
-    "@makeomatic/condition-semaphore": "^2.0.0",
     "bluebird": "^3.5.1",
     "chrome-launcher": "^0.10.2",
     "chrome-remote-interface": "^0.25.5",
@@ -52,7 +51,7 @@
     "ms-conf": "^3.2.0",
     "npm-path": "^2.0.4",
     "rimraf": "^2.6.2",
-    "semantic-release": "^15.0.3",
+    "semantic-release": "^15.1.2",
     "shelljs": "^0.8.1",
     "yargs": "^11.0.0"
   },
