--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ms-conf": "^3.2.0",
     "npm-path": "^2.0.4",
     "rimraf": "^2.6.2",
-    "semantic-release": "^15.1.2",
+    "semantic-release": "15.1.3",
     "shelljs": "^0.8.1",
     "yargs": "^11.0.0"
   },
