--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "lighthouse-logger": "^1.0.1",
     "ms-conf": "^3.2.0",
     "npm-path": "^2.0.4",
+    "pino": "^4.15.4",
     "rimraf": "^2.6.2",
-    "semantic-release": "15.1.4",
+    "semantic-release": "15.1.5",
     "shelljs": "^0.8.1",
     "yargs": "^11.0.0"
   },
