--- a/package.json
+++ b/package.json
@@ -19,53 +19,49 @@
     "access": "public"
   },
   "engine": {
-    "node": ">= 8.9.0"
+    "node": ">= 10.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "codecov": "^3.0.2",
-    "cross-env": "^5.1.5",
-    "eslint": "^4.19.1",
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-transform-strict-mode": "^7.0.0-beta.54",
+    "babel-core": "^7.0.0-0",
+    "babel-eslint": "8.x.x",
+    "babel-jest": "^23.4.0",
+    "babel-plugin-istanbul": "^5.0.0",
+    "codecov": "^3.0.4",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.1.0",
     "eslint-config-makeomatic": "^2.0.1",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-promise": "^3.7.0",
-    "jest": "^22.4.3",
-    "nyc": "^11.8.0"
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "jest": "^23.4.1",
+    "nyc": "^12.0.2"
   },
   "dependencies": {
-    "@commitlint/cli": "^6.2.0",
+    "@commitlint/cli": "^7.0.0",
     "bluebird": "^3.5.1",
     "chrome-launcher": "^0.10.2",
-    "chrome-remote-interface": "^0.25.5",
+    "chrome-remote-interface": "^0.26.0",
     "death": "^1.1.0",
-    "find-up": "^2.1.0",
+    "find-up": "^3.0.0",
     "glob": "^7.1.2",
     "husky": "^0.14.3",
     "is": "^3.2.1",
-    "lighthouse-logger": "^1.0.1",
     "ms-conf": "^3.2.0",
     "npm-path": "^2.0.4",
-    "pino": "^4.16.1",
+    "pino": "^4.17.3",
     "rimraf": "^2.6.2",
-    "semantic-release": "15.4.1",
+    "semantic-release": "15.8.0",
     "shelljs": "^0.8.2",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.1"
   },
   "bin": {
     "mdep": "./bin/cli.js"
   },
   "peerDependencies": {
-    "babel-plugin-istanbul": ">= 4.x.x",
-    "babel-register": ">= 6.24.0",
-    "codecov": ">= 3.x.x",
-    "cross-env": ">= 5.x.x",
-    "mocha": ">= 4.x.x",
-    "nyc": ">= 11.x.x"
+    "babel-plugin-istanbul": "^5.0.0",
+    "cross-env": "^5.2.0"
   },
   "files": [
     "bin/",
