--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "@babel/plugin-transform-strict-mode"
+    "@babel/plugin-transform-strict-mode",
+    "@babel/plugin-proposal-class-properties"
   ],
   "env": {
     "test": {
