--- a/package.json
+++ b/package.json
@@ -22,27 +22,28 @@
     "node": ">= 10.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-transform-strict-mode": "^7.0.0-beta.54",
+    "@babel/cli": "^7.0.0-beta.56",
+    "@babel/core": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
+    "@babel/plugin-transform-strict-mode": "^7.0.0-beta.56",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "8.x.x",
-    "babel-jest": "^23.4.0",
+    "babel-jest": "^23.4.2",
     "babel-plugin-istanbul": "^5.0.0",
     "codecov": "^3.0.4",
     "cross-env": "^5.2.0",
-    "eslint": "^5.1.0",
-    "eslint-config-makeomatic": "^2.0.1",
+    "eslint": "^5.3.0",
+    "eslint-config-makeomatic": "^3.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-promise": "^3.8.0",
-    "jest": "^23.4.1",
+    "jest": "^23.4.2",
     "nyc": "^12.0.2"
   },
   "dependencies": {
     "@commitlint/cli": "^7.0.0",
     "bluebird": "^3.5.1",
     "chrome-launcher": "^0.10.2",
-    "chrome-remote-interface": "^0.26.0",
+    "chrome-remote-interface": "^0.26.1",
     "death": "^1.1.0",
     "find-up": "^3.0.0",
     "glob": "^7.1.2",
@@ -50,9 +51,9 @@
     "is": "^3.2.1",
     "ms-conf": "^3.2.0",
     "npm-path": "^2.0.4",
-    "pino": "^4.17.3",
+    "pino": "^4.17.6",
     "rimraf": "^2.6.2",
-    "semantic-release": "15.8.0",
+    "semantic-release": "15.9.5",
     "shelljs": "^0.8.2",
     "yargs": "^12.0.1"
   },
@@ -70,5 +71,8 @@
     "git-hooks",
     ".releaserc.json",
     ".commitlintrc.js"
-  ]
+  ],
+  "jest": {
+    "testURL": "http://tester.local"
+  }
 }
