--- a/package.json
+++ b/package.json
@@ -22,40 +22,40 @@
     "node": ">= 10.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.56",
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
-    "@babel/plugin-transform-strict-mode": "^7.0.0-beta.56",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-strict-mode": "^7.0.0",
     "babel-core": "^7.0.0-0",
-    "babel-eslint": "8.x.x",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-plugin-istanbul": "^5.0.0",
-    "codecov": "^3.0.4",
+    "codecov": "^3.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.6.1",
     "eslint-config-makeomatic": "^3.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-promise": "^3.8.0",
-    "jest": "^23.4.2",
-    "nyc": "^12.0.2"
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "jest": "^23.6.0",
+    "nyc": "^13.0.1"
   },
   "dependencies": {
-    "@commitlint/cli": "^7.0.0",
-    "bluebird": "^3.5.1",
-    "chrome-launcher": "^0.10.2",
+    "@commitlint/cli": "^7.1.2",
+    "bluebird": "^3.5.2",
+    "chrome-launcher": "^0.10.5",
     "chrome-remote-interface": "^0.26.1",
     "death": "^1.1.0",
     "find-up": "^3.0.0",
-    "glob": "^7.1.2",
-    "husky": "^0.14.3",
+    "glob": "^7.1.3",
+    "husky": "^1.1.0",
     "is": "^3.2.1",
-    "ms-conf": "^3.2.0",
+    "ms-conf": "^3.3.0",
     "npm-path": "^2.0.4",
-    "pino": "^4.17.6",
+    "pino": "^5.6.3",
     "rimraf": "^2.6.2",
-    "semantic-release": "15.9.5",
+    "semantic-release": "15.9.17",
     "shelljs": "^0.8.2",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.2"
   },
   "bin": {
     "mdep": "./bin/cli.js"
