--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "npm-path": "^2.0.4",
     "pino": "^5.8.0",
     "rimraf": "^2.6.2",
-    "semantic-release": "15.10.3",
+    "semantic-release": "15.9.x",
     "shelljs": "^0.8.2",
     "yargs": "^12.0.2"
   },
@@ -61,7 +61,6 @@
     "mdep": "./bin/cli.js"
   },
   "peerDependencies": {
-    "babel-plugin-istanbul": "^5.0.0",
     "cross-env": "^5.2.0"
   },
   "files": [
