--- a/package.json
+++ b/package.json
@@ -46,12 +46,16 @@
     "find-up": "^3.0.0",
     "glob": "^7.1.3",
     "husky": "^1.1.2",
+    "hyperid": "^1.4.1",
     "is": "^3.2.1",
+    "js-yaml": "^3.12.0",
     "lodash.get": "^4.4.2",
+    "lodash.merge": "^4.6.1",
     "lodash.set": "^4.3.2",
     "ms-conf": "^3.3.1",
     "npm-path": "^2.0.4",
     "pino": "^5.8.0",
+    "read-pkg": "^4.0.1",
     "rimraf": "^2.6.2",
     "semantic-release": "15.9.x",
     "shelljs": "^0.8.2",
