feat: be able to run tests in parallel

--- a/.mdeprc
+++ b/.mdeprc
@@ -9,7 +9,9 @@
     "redisSentinel",
     "redisCluster",
     "rabbitmq",
-    "postgres"
+    "postgres",
+    "elasticsearch",
+    "cassandra"
   ],
   "extras": {
     "tester": {
