--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Vitaly Aminev <v@makeomatic.ca>",
   "license": "MIT",
   "scripts": {
-    "test": "./bin/cli.js test run",
+    "lint": "eslint ./bin",
+    "test": "yarn lint && ./bin/cli.js test run",
     "postinstall": "node ./scripts/setup-semantic-release.js",
     "semantic-release": "semantic-release"
   },
@@ -22,8 +23,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-strict-mode": "^7.2.0",
     "babel-eslint": "10.0.1",
     "codecov": "^3.1.0",
@@ -49,7 +50,7 @@
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.1",
     "lodash.set": "^4.3.2",
-    "ms-conf": "^3.3.1",
+    "ms-conf": "^4.0.0",
     "npm-path": "^2.0.4",
     "pino": "^5.9.0",
     "read-pkg": "^5.0.0",
