--- a/package.json
+++ b/package.json
@@ -22,42 +22,42 @@
     "node": ">= 10.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-strict-mode": "^7.2.0",
-    "babel-eslint": "10.0.1",
-    "codecov": "^3.3.0",
+    "babel-eslint": "10.0.2",
+    "codecov": "^3.5.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.0.1",
     "eslint-config-makeomatic": "^3.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "jest": "^24.7.1"
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "jest": "^24.8.0"
   },
   "dependencies": {
-    "@commitlint/cli": "^7.2.1",
-    "bluebird": "^3.5.4",
-    "chrome-launcher": "^0.10.5",
-    "chrome-remote-interface": "^0.27.0",
+    "@commitlint/cli": "^8.1.0",
+    "bluebird": "^3.5.5",
+    "chrome-launcher": "^0.11.1",
+    "chrome-remote-interface": "^0.27.2",
     "death": "^1.1.0",
-    "find-up": "^3.0.0",
-    "glob": "^7.1.3",
-    "husky": "^1.2.0",
+    "find-up": "^4.1.0",
+    "glob": "^7.1.4",
+    "husky": "^3.0.0",
     "hyperid": "^2.0.1",
     "is": "^3.2.1",
     "js-yaml": "^3.13.1",
     "lodash.get": "^4.4.2",
-    "lodash.merge": "^4.6.1",
+    "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
     "ms-conf": "^5.0.0",
     "npm-path": "^2.0.4",
-    "pino": "^5.12.2",
-    "read-pkg": "^5.0.0",
+    "pino": "^5.13.0",
+    "read-pkg": "^5.2.0",
     "rimraf": "^2.6.2",
-    "semantic-release": "15.9.x",
+    "semantic-release": "15.13.18",
     "shelljs": "^0.8.3",
-    "yargs": "^13.2.1"
+    "yargs": "^13.3.0"
   },
   "bin": {
     "mdep": "./bin/cli.js"
