--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "node": ">= 10.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-strict-mode": "^7.2.0",
-    "codecov": "^3.5.0",
-    "cross-env": "^5.2.1",
-    "eslint": "^6.3.0",
+    "codecov": "^3.6.1",
+    "cross-env": "^6.0.3",
+    "eslint": "^6.5.1",
     "eslint-config-makeomatic": "^3.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "bluebird": "^3.5.5",
+    "@commitlint/cli": "^8.2.0",
+    "bluebird": "^3.7.0",
     "chrome-launcher": "^0.11.2",
     "chrome-remote-interface": "^0.28.0",
     "death": "^1.1.0",
     "find-up": "^4.1.0",
     "glob": "^7.1.4",
-    "husky": "^3.0.5",
+    "husky": "^3.0.8",
     "hyperid": "^2.0.1",
     "is": "^3.2.1",
     "js-yaml": "^3.13.1",
@@ -51,7 +51,7 @@
     "lodash.set": "^4.3.2",
     "ms-conf": "^5.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^5.13.3",
+    "pino": "^5.13.4",
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.0",
     "semantic-release": "15.13.24",
@@ -62,7 +62,7 @@
     "mdep": "./bin/cli.js"
   },
   "peerDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0 | ^6.0.0"
   },
   "files": [
     "bin/",
