feat: couchdb base service

--- a/package.json
+++ b/package.json
@@ -22,26 +22,27 @@
     "node": ">= 10.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-transform-strict-mode": "^7.2.0",
     "codecov": "^3.6.1",
     "cross-env": "^6.0.3",
-    "eslint": "^6.5.1",
-    "eslint-config-makeomatic": "^3.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-makeomatic": "^4.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-unicorn": "^12.1.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
     "@commitlint/cli": "^8.2.0",
     "bluebird": "^3.7.1",
-    "chrome-launcher": "^0.11.2",
+    "chrome-launcher": "^0.12.0",
     "chrome-remote-interface": "^0.28.0",
     "death": "^1.1.0",
     "find-up": "^4.1.0",
-    "glob": "^7.1.4",
+    "glob": "^7.1.6",
     "husky": "^3.0.9",
     "hyperid": "^2.0.1",
     "is": "^3.2.1",
@@ -51,10 +52,10 @@
     "lodash.set": "^4.3.2",
     "ms-conf": "^5.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^5.13.5",
+    "pino": "^5.13.6",
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.0",
-    "semantic-release": "15.13.24",
+    "semantic-release": "15.13.30",
     "shelljs": "^0.8.3",
     "yargs": "^14.2.0"
   },
