--- a/.mdeprc
+++ b/.mdeprc
@@ -3,7 +3,7 @@
   "test_framework": "jest --coverage --coverageDirectory <coverageDirectory> --detectOpenHandles --runTestsByPath",
   "tests": "__tests__/*.js",
   "auto_compose": true,
-  "node": "10.16.3",
+  "node": "12.13.0",
   "tester_flavour": "chrome-tester",
   "services": [
     "redisSentinel",
@@ -11,7 +11,8 @@
     "rabbitmq",
     "postgres",
     "elasticsearch",
-    "cassandra"
+    "cassandra",
+    "couchdb"
   ],
   "extras": {
     "tester": {
