feat: semantic-release 12
BREAKING CHANGE: semantic-release 12 with support for multi-channel releases, configuration of .releaserc is changed and needs to be updated

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,8 @@
 {
-  "branch": "master",
+  "branches": [
+    "master",
+    { "name": "develop", "prerelease": true }
+  ],
   "analyzeCommits": {
     "preset": "angular",
     "releaseRules": [
