--- a/package.json
+++ b/package.json
@@ -23,49 +23,49 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-strict-mode": "^7.8.3",
     "codecov": "^3.6.5",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-makeomatic": "^4.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^16.0.0",
+    "eslint-plugin-unicorn": "^17.2.0",
     "jest": "^25.1.0",
-    "tempy": "^0.3.0"
+    "tempy": "^0.5.0"
   },
   "dependencies": {
     "@commitlint/cli": "^8.3.5",
     "bluebird": "^3.7.2",
-    "chrome-launcher": "^0.12.0",
+    "chrome-launcher": "^0.13.0",
     "chrome-remote-interface": "^0.28.1",
     "death": "^1.1.0",
     "find-up": "^4.1.0",
     "glob": "^7.1.6",
-    "husky": "^4.2.1",
+    "husky": "^4.2.3",
     "hyperid": "^2.0.3",
     "is": "^3.2.1",
     "js-yaml": "^3.13.1",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
-    "ms-conf": "^6.0.0",
+    "ms-conf": "^6.0.1",
     "npm-path": "^2.0.4",
-    "pino": "^5.16.0",
+    "pino": "^5.17.0",
     "read-pkg": "^5.2.0",
-    "rimraf": "^3.0.1",
-    "semantic-release": "17.0.2",
+    "rimraf": "^3.0.2",
+    "semantic-release": "17.0.4",
     "shelljs": "^0.8.3",
     "strip-final-newline": "^2.0.0",
-    "yargs": "^15.1.0"
+    "yargs": "^15.3.1"
   },
   "bin": {
     "mdep": "./bin/cli.js"
   },
   "peerDependencies": {
-    "cross-env": "^6.0.0"
+    "cross-env": ">= 6.0.0"
   },
   "files": [
     "bin/",
