--- a/.mdeprc
+++ b/.mdeprc
@@ -7,6 +7,7 @@
   "tester_flavour": "chrome-tester",
   "services": [
     "redisSentinel",
+    "rejsonSentinel",
     "redisCluster",
     "rabbitmq",
     "postgres",
