--- a/package.json
+++ b/package.json
@@ -22,41 +22,41 @@
     "node": ">= 12.15.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-strict-mode": "^7.12.1",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-strict-mode": "^7.12.13",
     "codecov": "^3.8.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.16.0",
-    "eslint-config-makeomatic": "^5.0.3",
+    "eslint": "^7.22.0",
+    "eslint-config-makeomatic": "^5.0.4",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^25.0.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-unicorn": "^28.0.2",
     "jest": "^26.6.3",
     "tempy": "^1.0.0"
   },
   "dependencies": {
-    "@commitlint/cli": "^11.0.0",
+    "@commitlint/cli": "^12.0.1",
     "bluebird": "^3.7.2",
     "chrome-launcher": "^0.13.4",
-    "chrome-remote-interface": "^0.28.1",
+    "chrome-remote-interface": "^0.29.0",
     "death": "^1.1.0",
     "find-up": "^5.0.0",
     "glob": "^7.1.6",
-    "husky": "^4.3.6",
+    "husky": "~4.x.x",
     "hyperid": "^2.1.0",
     "is": "^3.2.1",
-    "js-yaml": "^3.14.1",
+    "js-yaml": "^4.0.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
     "ms-conf": "^7.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^6.8.0",
+    "pino": "^6.11.2",
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "17.3.0",
+    "semantic-release": "17.4.2",
     "shelljs": "^0.8.3",
     "strip-final-newline": "^2.0.0",
     "yargs": "^16.2.0"
