feat: use husky 7, support mutagen for mac volume sync

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "makeomatic",
   "rules": {
-    "no-unused-expressions": 0
+    "no-unused-expressions": 0,
+    "object-curly-newline": 0
   }
 }
