--- a/package.json
+++ b/package.json
@@ -24,29 +24,35 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
+    "@babel/core": "^7.16.12",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-transform-strict-mode": "^7.12.13",
+    "@types/node": "^17.0.10",
     "codecov": "^3.8.1",
-    "cross-env": "^7.0.3",
     "eslint": "^8.4.1",
     "eslint-config-makeomatic": "^5.0.4",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-unicorn": "^39.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-unicorn": "^40.1.0",
     "jest": "^27.4.3",
     "tempy": "^1.0.0"
   },
   "dependencies": {
-    "@commitlint/cli": "^15.0.0",
+    "@commitlint/cli": "^16.1.0",
+    "@sinclair/typebox": "^0.23.2",
     "bluebird": "^3.7.2",
     "chrome-launcher": "^0.15.0",
     "chrome-remote-interface": "^0.31.1",
+    "cross-env": "^7.0.0",
     "death": "^1.1.0",
+    "execa": "^5",
+    "fastify": "^3.27.0",
+    "fastify-compress": "^4.0.1",
     "find-up": "^5.0.0",
+    "get-port": "^5",
     "glob": "^7.1.6",
     "husky": "~7.0.4",
-    "hyperid": "^2.1.0",
+    "hyperid": "^3.0.0",
     "is": "^3.2.1",
     "js-yaml": "^4.0.0",
     "lodash.get": "^4.4.2",
@@ -54,19 +60,19 @@
     "lodash.set": "^4.3.2",
     "ms-conf": "^7.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^7.5.1",
+    "pino": "^7.6.4",
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "18.0.1",
+    "semantic-release": "19.0.2",
+    "serialize-error": "^8.0.0",
     "shelljs": "^0.8.3",
+    "split2": "^4.1.0",
     "strip-final-newline": "=2.x.x",
+    "undici": "^4.12.2",
     "yargs": "^17.3.0"
   },
   "bin": {
     "mdep": "./bin/cli.js"
-  },
-  "peerDependencies": {
-    "cross-env": ">= 6.0.0"
   },
   "files": [
     "bin/",
@@ -79,12 +85,5 @@
   ],
   "jest": {
     "testURL": "http://tester.local"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "./node_modules/@makeomatic/deploy/git-hooks/prepare-commit-msg $HUSKY_GIT_PARAMS"
-    }
   }
 }
