--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint ./bin",
-    "test": "yarn lint && ./bin/cli.js test run",
-    "postinstall": "node ./scripts/setup-semantic-release.js",
+    "test": "npm run lint && ./bin/cli.js test run",
     "semantic-release": "semantic-release",
     "prepare": "husky install"
   },
@@ -35,7 +34,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-unicorn": "^40.1.0",
     "jest": "^27.4.3",
-    "tempy": "^1.0.0"
+    "tempy": "^1.0.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@commitlint/cli": "^16.1.0",
@@ -45,6 +45,7 @@
     "chrome-remote-interface": "^0.31.1",
     "cross-env": "^7.0.0",
     "death": "^1.1.0",
+    "debug": "^4.3.3",
     "execa": "^5",
     "fastify": "^3.27.0",
     "fastify-compress": "^4.0.1",
