--- a/package.json
+++ b/package.json
@@ -22,36 +22,36 @@
     "node": ">= 12.15.0"
   },
   "devDependencies": {
-    "codecov": "^3.8.1",
+    "codecov": "^3.8.3",
     "eslint": "^8.8.0",
-    "eslint-config-makeomatic": "^5.0.4",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-config-makeomatic": "^5.1.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-unicorn": "^40.1.0",
-    "jest": "^27.4.3",
-    "tempy": "^1.0.0",
+    "jest": "^27.4.7",
+    "tempy": "^1.0.1",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@commitlint/cli": "^16.1.0",
     "@sinclair/typebox": "^0.23.3",
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.14",
     "bluebird": "^3.7.2",
     "chrome-launcher": "^0.15.0",
     "chrome-remote-interface": "^0.31.1",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.3",
     "death": "^1.1.0",
     "debug": "^4.3.3",
-    "execa": "^5",
-    "fastify": "^3.27.0",
+    "execa": "^5.1.1",
+    "fastify": "^3.27.1",
     "fastify-compress": "^4.0.1",
     "find-up": "^5.0.0",
-    "get-port": "^5",
-    "glob": "^7.1.6",
+    "get-port": "^5.1.1",
+    "glob": "^7.2.0",
     "husky": "~7.0.4",
     "hyperid": "^3.0.0",
-    "is": "^3.2.1",
-    "js-yaml": "^4.0.0",
+    "is": "^3.3.0",
+    "js-yaml": "^4.1.0",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
@@ -61,12 +61,12 @@
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.2",
     "semantic-release": "19.0.2",
-    "serialize-error": "^8.0.0",
-    "shelljs": "^0.8.3",
+    "serialize-error": "^8.1.0",
+    "shelljs": "^0.8.5",
     "split2": "^4.1.0",
-    "strip-final-newline": "=2.x.x",
+    "strip-final-newline": "^2.0.0",
     "undici": "^4.13.0",
-    "yargs": "^17.3.0"
+    "yargs": "^17.3.1"
   },
   "bin": {
     "mdep": "./bin/cli.js",
