feat: upgraded dependencies, include redis enabled search

--- a/package.json
+++ b/package.json
@@ -24,34 +24,33 @@
     "node": ">= 12.15.0"
   },
   "devDependencies": {
-    "codecov": "^3.8.3",
-    "eslint": "^8.9.0",
+    "eslint": "^8.18.0",
     "eslint-config-makeomatic": "^5.1.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-unicorn": "^40.1.0",
-    "jest": "^27.5.1",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "jest": "^28.1.1",
     "tempy": "^1.0.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@sinclair/typebox": "^0.23.3",
-    "@types/node": "^17.0.18",
+    "@commitlint/cli": "^17.0.2",
+    "@sinclair/typebox": "^0.23.5",
+    "@types/node": "^18.0.0",
     "bluebird": "^3.7.2",
-    "chrome-launcher": "^0.15.0",
+    "chrome-launcher": "^0.15.1",
     "chrome-remote-interface": "^0.31.2",
     "cross-env": "^7.0.3",
     "death": "^1.1.0",
-    "debug": "^4.3.3",
-    "execa": "^5.1.1",
-    "fastify": "^3.27.1",
-    "fastify-compress": "^4.0.1",
+    "debug": "^4.3.4",
+    "execa": "5",
+    "fastify": "^4.1.0",
+    "fastify-compress": "^4.1.0",
     "find-up": "^5.0.0",
     "get-port": "^5.1.1",
-    "glob": "^7.2.0",
-    "husky": "~7.0.4",
-    "hyperid": "^3.0.0",
+    "glob": "^8.0.3",
+    "husky": "~8.0.1",
+    "hyperid": "^3.0.1",
     "is": "^3.3.0",
     "js-yaml": "^4.1.0",
     "lodash.get": "^4.4.2",
@@ -59,16 +58,16 @@
     "lodash.set": "^4.3.2",
     "ms-conf": "^7.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^7.6.5",
+    "pino": "^8.1.0",
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "19.0.2",
+    "semantic-release": "19.0.3",
     "serialize-error": "^8.1.0",
     "shelljs": "^0.8.5",
     "split2": "^4.1.0",
     "strip-final-newline": "^2.0.0",
-    "undici": "^4.14.1",
-    "yargs": "^17.3.1"
+    "undici": "^5.5.1",
+    "yargs": "^17.5.1"
   },
   "bin": {
     "mdep": "./bin/cli.js",
