--- a/package.json
+++ b/package.json
@@ -24,28 +24,27 @@
     "node": ">= 12.15.0"
   },
   "devDependencies": {
-    "eslint": "^8.18.0",
+    "eslint": "^8.23.0",
     "eslint-config-makeomatic": "^5.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-unicorn": "^42.0.0",
-    "jest": "^28.1.1",
-    "tempy": "^1.0.1",
-    "typescript": "^4.7.4"
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-unicorn": "^43.0.2",
+    "jest": "^29.0.3",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@sinclair/typebox": "^0.23.5",
-    "@types/node": "^18.0.0",
+    "@commitlint/cli": "^17.1.2",
+    "@fastify/compress": "^6.1.1",
+    "@sinclair/typebox": "^0.24.40",
+    "@types/node": "^18.7.16",
     "bluebird": "^3.7.2",
     "chrome-launcher": "^0.15.1",
-    "chrome-remote-interface": "^0.31.2",
+    "chrome-remote-interface": "^0.31.3",
     "cross-env": "^7.0.3",
     "death": "^1.1.0",
     "debug": "^4.3.4",
     "execa": "5",
-    "fastify": "^4.1.0",
-    "@fastify/compress": "^6.0.0",
+    "fastify": "^4.5.3",
     "find-up": "^5.0.0",
     "get-port": "^5.1.1",
     "glob": "^8.0.3",
@@ -58,15 +57,16 @@
     "lodash.set": "^4.3.2",
     "ms-conf": "^7.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^8.1.0",
+    "pino": "^8.5.0",
     "read-pkg": "^5.2.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "19.0.3",
+    "semantic-release": "19.0.5",
     "serialize-error": "^8.1.0",
     "shelljs": "^0.8.5",
     "split2": "^4.1.0",
     "strip-final-newline": "^2.0.0",
-    "undici": "^5.5.1",
+    "tempy": "1",
+    "undici": "^5.10.0",
     "yargs": "^17.5.1"
   },
   "bin": {
