--- a/package.json
+++ b/package.json
@@ -24,32 +24,32 @@
     "node": ">= 12.15.0"
   },
   "devDependencies": {
-    "eslint": "^8.28.0",
+    "eslint": "^8.38.0",
     "eslint-config-makeomatic": "^5.1.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unicorn": "^45.0.1",
-    "jest": "^29.3.1",
-    "typescript": "^4.9.3"
+    "eslint-plugin-unicorn": "^46.0.0",
+    "jest": "^29.5.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@fastify/compress": "^6.2.0",
-    "@sinclair/typebox": "^0.25.10",
-    "@types/node": "^18.11.9",
+    "@commitlint/cli": "^17.6.1",
+    "@fastify/compress": "^6.2.1",
+    "@sinclair/typebox": "^0.28.2",
+    "@types/node": "^18.15.13",
     "bluebird": "^3.7.2",
-    "chrome-launcher": "^0.15.1",
-    "chrome-remote-interface": "^0.31.3",
+    "chrome-launcher": "^0.15.2",
+    "chrome-remote-interface": "^0.32.2",
     "cross-env": "^7.0.3",
     "death": "^1.1.0",
     "debug": "^4.3.4",
-    "execa": "5",
-    "fastify": "^4.10.2",
+    "execa": "^5.1.1",
+    "fastify": "^4.15.0",
     "find-up": "^5.0.0",
     "get-port": "^5.1.1",
-    "glob": "^8.0.3",
-    "husky": "~8.0.2",
-    "hyperid": "^3.0.1",
+    "glob": "^10.2.1",
+    "husky": "~8.0.3",
+    "hyperid": "^3.1.1",
     "is": "^3.3.0",
     "js-yaml": "^4.1.0",
     "lodash.get": "^4.4.2",
@@ -57,17 +57,17 @@
     "lodash.set": "^4.3.2",
     "ms-conf": "^7.0.2",
     "npm-path": "^2.0.4",
-    "pino": "^8.7.0",
+    "pino": "^8.11.0",
     "read-pkg": "^5.2.0",
-    "rimraf": "^3.0.2",
-    "semantic-release": "19.0.5",
+    "rimraf": "^5.0.0",
+    "semantic-release": "21.0.1",
     "serialize-error": "^8.1.0",
     "shelljs": "^0.8.5",
-    "split2": "^4.1.0",
+    "split2": "^4.2.0",
     "strip-final-newline": "^2.0.0",
-    "tempy": "1",
-    "undici": "^5.13.0",
-    "yargs": "^17.6.2"
+    "tempy": "^1.0.1",
+    "undici": "^5.22.0",
+    "yargs": "^17.7.1"
   },
   "bin": {
     "mdep": "./bin/cli.js",
