feat: esm-only, drop bluebird, shelljs, yarn
BREAKING CHANGE: drops usage of mentioned dependencies, only distributes as ESM.
Introduces cosmicconfig to be able to read more configuration formats. This can
still be used in CJS project as it is self-contained. However, projects using
chrome helpers may have issues, auto-install script does less and eventually
should be fully removed

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
   "extends": "makeomatic",
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
   "rules": {
     "no-unused-expressions": 0,
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "import/extensions": ["error", "always", { "ignorePackages": true }],
+    "no-console": 0
   }
 }
