--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,8 +17,9 @@ global_job_config:
   prologue:
     commands:
       - set -e
-      - sem-version node 18
-      - curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@8
+      - sem-version node 20.10
+      - corepack enable
+      - corepack install pnpm@8.x
       - checkout
       - cache restore node-$(checksum pnpm-lock.yaml)
       - pnpm i --prefer-offline
